@@ -644,8 +644,8 @@ $pgv_lang["media_dir_3"]				= "Dieses Medien Objekt befindet sich im geschützte
 $pgv_lang["thumb_dir_1"]				= "Dieses Miniaturbild befindet sich auf einem externen Server";
 $pgv_lang["thumb_dir_2"]				= "Dieses Miniaturbild befindet sich im gewöhnlichen Medien-Verzeichnis";
 $pgv_lang["thumb_dir_3"]				= "Dieses Miniaturbild befindet sich im geschützten Medien-Verzeichnis";
-$pgv_lang["moveto_2"]					= "Ins geschütztes Verzeichnis verlegen";
-$pgv_lang["moveto_3"]					= "Ins gewöhnliches Verzeichnis verlegen";
+$pgv_lang["moveto_2"]					= "Ins geschützte Verzeichnis verlegen";
+$pgv_lang["moveto_3"]					= "Ins gewöhnliche Verzeichnis verlegen";
 $pgv_lang["move_standard"]				= "Nach gew. Verz. verlegen";
 $pgv_lang["move_protected"]				= "Nach gesch. Verz. verlegen";
 $pgv_lang["setperms"]					= "Medienverzeichnis-Rechte bestimmen";
@@ -1485,7 +1485,6 @@ $pgv_lang["hs_intruehelp"]				= "Nur Hilfstexte";
 $pgv_lang["hs_inallhelp"]				= "Alle Texte";
 $pgv_lang["choose"]						= "Wählen:";
 $pgv_lang["account_information"]		= "Benutzer Informationen";
-$pgv_lang["TYPE__video"]				= "Video";
 $pgv_lang["download_image"]				= "Datei herunterladen";
 $pgv_lang["media_privacy"]				= "Sie dürfen wegen Datenschutz dieses Objekt nicht sehen.";
 $pgv_lang["relations_heading"]			= "Dieses Bild gehört zu:";
@@ -1529,8 +1528,11 @@ $pgv_lang["TYPE__electronic"]			= "Elektronisch";
 $pgv_lang["TYPE__card"]					= "Karte";
 $pgv_lang["TYPE__book"]					= "Buch";
 $pgv_lang["TYPE__audio"]				= "Ton";
+$pgv_lang["TYPE__video"]				= "Video";
 $pgv_lang["TYPE__certificate"]			= "Urkunde";
 $pgv_lang["TYPE__document"]				= "Dokument";
+$pgv_lang["TYPE__painting"]				= "Gemälde";
+$pgv_lang["TYPE__other"]				= "Keine der obigen";
 $pgv_lang["familybook_chart"]			= "Familienbuch Diagramm";
 $pgv_lang["family_of"]					= "Familie von:&nbsp;";
 $pgv_lang["descent_steps"]				= "Nachfahren Stufen";
